Add new accommodation

--- a/src/app/components/newaccommodation/newaccommodation.component.html
+++ b/src/app/components/newaccommodation/newaccommodation.component.html
@@ -8,41 +8,41 @@
 
   <div class="form-group ">
     <label class="col-sm-2" for="Name">Name:</label>
-    <input class="col-sm-2" type="text" style="font-size: 12px" placeholder="Name">
+    <input class="col-sm-2" type="text" [(ngModel)]="accommodation.name" name="name" style="font-size: 12px" placeholder="Name">
   </div>
   <div class="form-group ">
       <label class="col-sm-2" for="Name">Type:</label>
-      <select id="type" style="font-size: 13px" class="col-sm-2">
+      <select id="type" (change)="selectChangeHandler($event)" name="type" style="font-size: 13px" class="col-sm-2">
           <option selected>Choose...</option>
-          <option>Hotel</option>
-          <option>Bad&breakfast</option>
-          <option>Apartman</option>
-        </select>
+          <option value="Hotel">Hotel</option>
+          <option value="Bad&breakfast">Bad&breakfast</option>
+          <option value="Apartman">Apartman</option>
+      </select>
   </div>
   <div class="form-group ">
       <label class="col-sm-2 d-inline align-top"  for="Name">Description:</label>
-      <textarea class="form-control col-sm-2 d-inline" style="margin-left: 70px; font-size: 11px;" rows="2"  id="comment"></textarea>
+      <textarea class="form-control col-sm-2 d-inline" [(ngModel)]="accommodation.description" name="description" style="margin-left: 70px; font-size: 11px;" rows="2"  id="comment"></textarea>
       
   </div>
   <legend style="margin-left: 12px;">Location</legend>
   <div class="form-group ">
       <label class="col-sm-2" for="Country">Country:</label>
-      <input class="col-sm-2" type="text" style="font-size: 12px" placeholder="Country">
+      <input class="col-sm-2" type="text" [(ngModel)]="accommodation.country" name="country" style="font-size: 12px" placeholder="Country">
   </div>
   <div class="form-group ">
       <label class="col-sm-2" for="City">City:</label>
-      <input class="col-sm-2" type="text" style="font-size: 12px" placeholder="City">
+      <input class="col-sm-2" type="text" [(ngModel)]="accommodation.city" name="city" style="font-size: 12px" placeholder="City">
   </div>
   <div class="form-group ">
       <label class="col-sm-2" for="Address">Address:</label>
-      <input class="col-sm-2" type="text" style="font-size: 12px" placeholder="Address">
+      <input class="col-sm-2" type="text" [(ngModel)]="accommodation.address" name="address" style="font-size: 12px" placeholder="Address">
   </div>
   <div class="row"></div>
  
   <legend style="margin-left: 12px;">Additional services</legend>
   <div style="margin-left: 12px;" class="form-group">
       <div class="form-check">
-        <input class="form-check-input" type="checkbox" id="gridCheck">
+        <input class="form-check-input" [(ngModel)]="accommodation.wiFi" name="wiFi" type="checkbox" id="gridCheck">
         <label class="form-check-label" for="gridCheck">
           WiFi
         </label>
@@ -50,7 +50,7 @@
     </div>
     <div style="margin-left: 12px;" class="form-group">
         <div class="form-check">
-          <input class="form-check-input" type="checkbox" id="gridCheck">
+          <input class="form-check-input" [(ngModel)]="accommodation.tv" name="tv" type="checkbox" id="gridCheck">
           <label class="form-check-label" for="gridCheck">
             TV
           </label>
@@ -58,7 +58,7 @@
       </div>
       <div style="margin-left: 12px;" class="form-group">
           <div class="form-check">
-            <input class="form-check-input" type="checkbox" id="gridCheck">
+            <input class="form-check-input" [(ngModel)]="accommodation.parking" name="parking" type="checkbox" id="gridCheck">
             <label class="form-check-label" for="gridCheck">
               Parking
             </label>
@@ -66,7 +66,7 @@
         </div>
         <div style="margin-left: 12px;" class="form-group">
             <div class="form-check">
-              <input class="form-check-input" type="checkbox" id="gridCheck">
+              <input class="form-check-input" [(ngModel)]="accommodation.kitchen" name="kitchen" type="checkbox" id="gridCheck">
               <label class="form-check-label" for="gridCheck">
                 Kitchen
               </label>
@@ -74,7 +74,7 @@
           </div>
           <div style="margin-left: 12px;" class="form-group">
               <div class="form-check">
-                <input class="form-check-input" type="checkbox" id="gridCheck">
+                <input class="form-check-input" [(ngModel)]="accommodation.breakfast" name="breakfast" type="checkbox" id="gridCheck">
                 <label class="form-check-label" for="gridCheck">
                     Breakfast
                 </label>
@@ -82,7 +82,7 @@
             </div>
             <div style="margin-left: 12px;" class="form-group">
                 <div class="form-check">
-                  <input class="form-check-input" type="checkbox" id="gridCheck">
+                  <input class="form-check-input" [(ngModel)]="accommodation.halfBoard" name="halfBoard" type="checkbox" id="gridCheck">
                   <label class="form-check-label" for="gridCheck">
                       HalfBoard
                   </label>
@@ -90,7 +90,7 @@
               </div>
               <div style="margin-left: 12px;" class="form-group">
                   <div class="form-check">
-                    <input class="form-check-input" type="checkbox" id="gridCheck">
+                    <input class="form-check-input" [(ngModel)]="accommodation.fullBoard" name="fullBoard" type="checkbox" id="gridCheck">
                     <label class="form-check-label" for="gridCheck">
                         FullBoard
                     </label>
@@ -98,13 +98,13 @@
                 </div>
                 <div style="margin-left: 12px;" class="form-group">
                     <div class="form-check">
-                      <input class="form-check-input" type="checkbox" id="gridCheck">
+                      <input class="form-check-input" [(ngModel)]="accommodation.bathroom" name="bathroom" type="checkbox" id="gridCheck">
                       <label class="form-check-label" for="gridCheck">
                           Bathroom
                       </label>
                     </div>
                   </div>
-                  <button style="margin-left: 300px;" type="submit" class="btn btn-primary">Submit</button>
+                  <button style="margin-left: 300px;" type="submit" (click)="addNewAccommodation()" class="btn btn-primary">Submit</button>
 
 
 </form>
