--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -8,7 +8,7 @@
           <label>Password:</label>
           <input type="password" placeholder="password" [(ngModel)]="agent1.password" name="password" #password1 required/>
           <input class="submit font-weight-bold" type="submit" value="LOGIN" (click)="login(); email1.value=''; password1.value=''">
-          <p class="message">Not registered? <a href="#">Create an account</a></p>
+          <button class="message">Not registered? <a onclick="location.href='/registration'">Create an account</a></button>
         </form>
       </div>
   </div>
